# inventory-management-api

./: .gitignore  .pre-commit-config.yaml  README.md  create_database.py  pyproject.toml
inven_api/: __init__.py  create_database.py  dependencies.py  main.py
inven_api/common/: .env.db  __init__.py  config.py  log.py
inven_api/database/: __init__.py  connection.py  models.py  session.py
inven_api/routes/: __init__.py  build_products.py  build_tools.py  builds.py  http_models.py  products.py  tools.py
tests/: setup_deps.py  test_builds.py  test_config.py  test_logs.py  test_products.py  test_tools.py
